# openldap

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  ANNOUNCEMENT  CHANGES  COPYRIGHT  INSTALL  Make-common  Make-common.dist  Makefile.in  README  acconfig.h  aclocal.m4  configure  configure.ac  configure.in
.github/workflows/: close-pull-request.yaml
clients/: Makefile.in
clients/fax500/: Makefile.in  main.c  rp500.c
clients/finger/: main.c
clients/gopher/: go500.c  go500gw.c
clients/mail500/: main.c
clients/rcpt500/: main.c  query.c
clients/tools/: Makefile.in  common.c  common.h  ldapcompare.c  ldapdelete.c  ldapexop.c  ldapmodify.c  ldapmodrdn.c  ldappasswd.c  ldapsearch.c  ldapurl.c  ldapvc.c  ldapwhoami.c
clients/ud/: Makefile.in  main.c  util.c
contrib/: ConfigOIDs
contrib/ldapc++/: COPYRIGHT  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  version.sh  version.var
contrib/ldaptcl/: COPYRIGHT  tclAppInit.c  tkAppInit.c
contrib/slapd-modules/: README
contrib/slapd-tools/: README  statslog  wrap_slap_ops
contrib/whois++/: whois++.c
doc/: Makefile.in
doc/drafts/: draft-behera-ldap-password-policy-xx.txt  draft-behera-ldap-password-policy-xx.xml  draft-howard-rfc2307bis-xx.txt  draft-howard-rfc2307bis-xx.xml  draft-ietf-ldapext-acl-model-xx.txt
doc/guide/: plain.sdf  preamble.sdf
doc/man/: Makefile.in
include/: Makefile.in  avl.h  bridge.h  getopt-compat.h  lber.h  lber_types.h.nt  lber_types.hin  ldap.h  ldap_avl.h  ldap_config.hin  ldap_defaults.h  ldap_features.hin  ldap_int_thread.h  ldap_log.h  ldap_pvt.h  ldap_pvt_thread.h  ldap_rq.h  ldapconfig.h.in  ldif.h  liblber-config.hin  libldap-config.hin  lthread.h  lutil.h  lutil_hash.h  lutil_ldap.h  lutil_md5.h  lutil_sha1.h  openldap.h  portable.h  portable.h.bot  portable.h.in  portable.h.nt  portable.hin  rewrite.h  sd-notify.h  slapi-plugin.h  sysexits-compat.h
include/ac/: alloca.h  crypt.h  regex.h  socket.h  stdlib.h  sysexits.h  termios.h  time.h  unistd.h  wait.h
libraries/: Makefile.in
libraries/libavl/: avl.c
libraries/liblber/: Makefile.in  bprint.c  debug.c  decode.c  dtest.c  encode.c  etest.c  idtest.c  io.c  lber-int.h  lber.map.in  liblber.vers.in  memory.c  nt_err.c  options.c  sockbuf.c  stdio.c
libraries/libldap/: Make-template  Makefile.in  abandon.c  add.c  apitest.c  avl.c  cache.c  cldap.c  compare.c  controls.c  cyrus.c  delete.c  deref.c  dnssrv.c  dntest.c  error.c  extended.c  fetch.c  filter.c  ftest.c  getvalues.c  init.c  kbind.c  ldap-int.h  ldap-tls.h  ldap.map.in  ldap_thr_debug.h  ldif.c  ldifutil.c  libldap.vers.in  modify.c  modrdn.c  open.c  options.c  os-ip.c  os-local.c  print.c  regex.c  request.c  result.c  (+25 more)
libraries/libldbm/: ldbm.c
libraries/liblmdb/: CHANGES  Doxyfile  Makefile  crypto.c  cryptoc.c  intro.doc  lmdb.h  mdb.c  mdb_copy.1  mdb_copy.c  mdb_drop.1  mdb_drop.c  mdb_dump.1  mdb_dump.c  mdb_load.1  mdb_load.c  mdb_stat.1  mdb_stat.c  midl.c  midl.h  module.c  mplay.c  mtest_enc.c  mtest_enc2.c  mtest_enc3.c  mtest_enc4.c  mtest_remap.c  upgrading.doc
libraries/liblthread/: thread.c
libraries/liblunicode/: Makefile.in  ucstr.c
libraries/liblutil/: Makefile.in  base64.c  detach.c  entropy.c  getopt.c  getpass.c  getpeereid.c  hash.c  lockf.c  md5.c  memcmp.c  ntservice.c  passfile.c  passwd.c  ptest.c  sasl.c  sha1.c  signal.c  sockpair.c  stats.c  utils.c  uuid.c
libraries/librewrite/: Makefile.in  config.c  context.c  escapemap.c  info.c  ldapmap.c  map.c  var.c  (+9 more)
servers/: Makefile.in
tests/: Makefile.in  README  STATS.md  run.in
(+1359 files in other folders)
